Ignore basis set files

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,22 @@ Release/
 
 # Users commonly store their specific CMake settings in a toolchain file
 toolchain.cmake
+
+# Ignore basis set files
+**/*.acesii
+**/*.bas
+**/*.bdf
+**/*.bse
+**/*.c4bas
+**/*.cp2k
+**/*.d2k
+**/*.dalton
+**/*.gbs
+**/*.json
+**/*.molcas
+**/*.mpro
+**/*.nw
+**/*.orca
+**/*.pqs
+**/*.qchem
+**/*.tm
