Update job name

--- a/.github/workflows/download_and_generate_data.yaml
+++ b/.github/workflows/download_and_generate_data.yaml
@@ -7,7 +7,7 @@ on:
       - master
 
 jobs:
-  Download-Reference-Data:
+  Download-and-Generate-Reference-Data:
     runs-on: ubuntu-latest
     
     steps:
