--- a/.github/workflows/download_and_generate_data.yaml
+++ b/.github/workflows/download_and_generate_data.yaml
@@ -27,6 +27,7 @@ jobs:
       
       - name: Prepare git state
         run: |
+          git fetch
           git checkout generated_data
           git merge master
       
