--- a/.github/workflows/download_and_generate_data.yaml
+++ b/.github/workflows/download_and_generate_data.yaml
@@ -28,12 +28,8 @@ jobs:
       - name: Prepare git state
         run: |
           git fetch
-          git status
-          ls src/chemcache
           git checkout generated_data
-          git status
-          ls src/chemcache
-          git merge master
+          git merge master -m "Merge branch 'master' into generated_data"
       
       - name: Download reference data
         run: .github/workflows/scripts/download_reference_data.sh
