Added git fetch before git checkout

--- a/.github/workflows/download_and_generate_data.yaml
+++ b/.github/workflows/download_and_generate_data.yaml
@@ -34,7 +34,9 @@ jobs:
           github_token: ${{ github.token }}
 
       - name: Checkout generated_data
-        run: git checkout generated_data
+        run: |
+          git fetch
+          git checkout generated_data
 
       - name: Download reference data
         run: .github/workflows/scripts/download_reference_data.sh
