from libchemist to chemist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,8 @@ option(BUILD_PYBINDINGS "Should we build Python3 bindings?" ON)
 nwx_cxx_api_docs("${project_inc_dir}")
 
 cpp_find_or_build_dependency(
-    libchemist
-    URL github.com/NWChemEx-Project/libchemist
+    chemist
+    URL github.com/NWChemEx-Project/chemist
     PRIVATE TRUE
     BUILD_TARGET chemist
     FIND_TARGET nwx::chemist
