Added identity name and email

--- a/.github/workflows/download_and_generate_data.yaml
+++ b/.github/workflows/download_and_generate_data.yaml
@@ -25,6 +25,11 @@ jobs:
           . venv/bin/activate
           pip install -r reference_data/requirements.txt
       
+      - name: Configuring ID
+        run: |
+          git config --global user.name zachcran
+          git config --global user.email zachcran@iastate.edu
+
       - name: Merge master -> generated_data
         run: |
           git fetch
