--- a/.github/workflows/download_and_generate_data.yaml
+++ b/.github/workflows/download_and_generate_data.yaml
@@ -14,6 +14,9 @@ jobs:
       - name: Get source
         uses: actions/checkout@v2
 
+      - name: Set up Git User
+        uses: fregante/setup-git-user@v1
+
       - name: Python setup
         uses: actions/setup-python@v2
         with:
@@ -24,11 +27,6 @@ jobs:
           python -m venv venv
           . venv/bin/activate
           pip install -r reference_data/requirements.txt
-      
-      - name: Configuring ID
-        run: |
-          git config --global user.name zachcran
-          git config --global user.email zachcran@iastate.edu
 
       - name: Merge master -> generated_data
         run: |
