--- a/.github/workflows/download_and_generate_data.yaml
+++ b/.github/workflows/download_and_generate_data.yaml
@@ -43,6 +43,9 @@ jobs:
       - name: Generate reference data source code
         run: .github/workflows/scripts/generate_reference_data.sh
 
+      - name: Format generated code
+        run: find src/ -iname '*.cpp' | xargs clang-format -i
+
       - name: Commit and push changes to data branch
         uses: actions-x/commit@v2
         with:
