Format generated C++ code as part of CI (#36)
* Add workflow step to format generated files with 'clang-format' before committing

* Add verbosity to the 'clang-format' call

* Update commit action version

* Update inputs for new commit action

--- a/.github/workflows/download_and_generate_data.yaml
+++ b/.github/workflows/download_and_generate_data.yaml
@@ -43,8 +43,11 @@ jobs:
       - name: Generate reference data source code
         run: .github/workflows/scripts/generate_reference_data.sh
 
+      - name: Format generated code
+        run: find src/ -iname '*.cpp' | xargs clang-format --verbose -i
+
       - name: Commit and push changes to data branch
-        uses: actions-x/commit@v2
+        uses: github-actions-x/commit@v2.9
         with:
-          branch: generated_data
-          message: Automatically updated reference data using GitHub Actions
+          push-branch: generated_data
+          commit-message: Automatically updated reference data using GitHub Actions
