--- a/.github/workflows/deploy_docs.yaml
+++ b/.github/workflows/deploy_docs.yaml
@@ -17,6 +17,9 @@ jobs:
       # This implicitly gets Python to get Sphinx
       - name: Get dependencies
         run: .github/workflows/scripts/get_dependencies.sh cmake doxygen sphinx
+        uses: NWChemEx-Project/.github/actions/get_dependencies@master
+          with:
+            dependencies: cmake doxygen sphinx
 
       - name: Build Python documentation
         run: |
@@ -33,7 +36,9 @@ jobs:
           deactivate
 
       - name: Build C++ and overall documentation
-        run: .github/workflows/scripts/build_docs.sh chemcache_cxx_api
+        uses: NWChemEx-Project/.github/actions/build_docs@master
+          with:
+            target: chemcache_cxx_api
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
