--- a/.github/workflows/c-cpp.yaml
+++ b/.github/workflows/c-cpp.yaml
@@ -1,5 +1,4 @@
-#
-# Copyright 2023 NWChemEx-Project
+# Copyright 2021 NWChemEx-Project
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,7 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
+#
 name: C_C++_CI
 
 on:
@@ -20,14 +19,22 @@ on:
     branches:
       - master
 
-
 jobs:
-  build:
+  build-with-gcc:
     uses: NWChemEx-Project/.github/.github/workflows/c-cpp_tmpl.yaml@master
     with: 
-      dependencies: 'gcc gcovr cmake openblas cblas lapacke scalapack boost eigen3 openmpi cppyy numpy libint'
+      dependencies: 'ninja gcc gcovr cmake openblas cblas lapacke scalapack boost eigen3 openmpi'
       clang-build: false
       gcc-build: true
-      ninja_build: false
+      ninja_build: true
+    secrets:
+      CMAIZE_GITHUB_TOKEN: ${{ secrets.CMAIZE_GITHUB_TOKEN }}
+  build-with-clang:
+    uses: NWChemEx-Project/.github/.github/workflows/c-cpp_tmpl.yaml@master
+    with: 
+      dependencies: 'ninja clang gcovr cmake openblas cblas lapacke scalapack boost eigen3 openmpi'
+      clang-build: true
+      gcc-build: false
+      ninja_build: true
     secrets:
       CMAIZE_GITHUB_TOKEN: ${{ secrets.CMAIZE_GITHUB_TOKEN }}
