--- a/.github/workflows/deploy_docs.yaml
+++ b/.github/workflows/deploy_docs.yaml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       cmake_version: 3.16.3
+      gcc_version: 9
       arch: Linux-x86_64
     steps:
       - name: Obtain Source
