Generate data to create correct release image

--- a/.github/actions/container-build_test_release/docker-action/Dockerfile
+++ b/.github/actions/container-build_test_release/docker-action/Dockerfile
@@ -20,6 +20,9 @@ FROM ghcr.io/nwchemex-project/base_chemcache:$base_tag
 
 COPY --from=0 /install /install
 
+RUN apt-get update \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y python3-venv
+
 COPY build_test.sh /build_test.sh
 
 RUN ["chmod", "+x", "/build_test.sh"]
