--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -16,9 +16,10 @@
 name: .github Pull Request Workflow
 
 on:
-  pull_request:
-    branches:
-      - master
+  workflow_dispatch:
+  # pull_request:
+  #   branches:
+  #     - master
 
 jobs:
   Common-Pull-Request:
