--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -16,7 +16,7 @@
 name: .github Merge Workflow
 
 on:
-  pull_request:
+  push:
     branches:
       - master
 
@@ -28,17 +28,17 @@ jobs:
   #     generate_module_docs: true
   #   secrets: inherit
 
-  # # Bump the version tag
-  # bump_tag:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: haya14busa/action-bumpr@v1
-  #       with:
-  #         default_bump_level: patch
-  #         github_token: ${{ secrets.TAG_TOKEN }}
-  #         tag_as_user: .github[bot]
-  #         tag_as_email: .github[bot]@github.com
+  # Bump the version tag
+  bump_tag:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: haya14busa/action-bumpr@v1
+        with:
+          default_bump_level: patch
+          github_token: ${{ secrets.TAG_TOKEN }}
+          tag_as_user: .github[bot]
+          tag_as_email: .github[bot]@github.com
 
   # Deploy updated documentation
   deploy_docs:
@@ -92,37 +92,37 @@ jobs:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           publish_dir: ./docs/build/html  
 
-  # download-and-generate-reference-data:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: fregante/setup-git-user@v1
-  #     - uses: actions/setup-python@v2
-  #       with:
-  #         python-version: '3.x'
-  #     - name: Install venv and dependencies
-  #       run: |
-  #         python -m venv venv
-  #         . venv/bin/activate
-  #         pip install -r reference_data/requirements.txt
-  #       shell: bash
-  #     - name: Overwrite 'generated_data' with 'master'
-  #       run: |
-  #         git fetch
-  #         git checkout --track origin/generated_data
-  #         git checkout master
-  #         git merge -s ours generated_data -m "Merge branch 'generated_data'" --allow-unrelated-histories
-  #         git checkout generated_data
-  #         git merge master -m "Merge master -> generated_data"
-  #       shell: bash
-  #     - name: Download reference data
-  #       run: .github/workflows/scripts/download_reference_data.sh
-  #     - name: Generate reference data source code
-  #       run: .github/workflows/scripts/generate_reference_data.sh
-  #     - name: Format generated code
-  #       run: find src/ -iname '*.cpp' | xargs clang-format --verbose -i
-  #     - name: Commit and push changes to data branch
-  #       uses: github-actions-x/commit@v2.9
-  #       with:
-  #         push-branch: generated_data
-  #         commit-message: Automatically updated reference data using GitHub Actions
+  download-and-generate-reference-data:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: fregante/setup-git-user@v1
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Install venv and dependencies
+        run: |
+          python -m venv venv
+          . venv/bin/activate
+          pip install -r reference_data/requirements.txt
+        shell: bash
+      - name: Overwrite 'generated_data' with 'master'
+        run: |
+          git fetch
+          git checkout --track origin/generated_data
+          git checkout master
+          git merge -s ours generated_data -m "Merge branch 'generated_data'" --allow-unrelated-histories
+          git checkout generated_data
+          git merge master -m "Merge master -> generated_data"
+        shell: bash
+      - name: Download reference data
+        run: .github/workflows/scripts/download_reference_data.sh
+      - name: Generate reference data source code
+        run: .github/workflows/scripts/generate_reference_data.sh
+      - name: Format generated code
+        run: find src/ -iname '*.cpp' | xargs clang-format --verbose -i
+      - name: Commit and push changes to data branch
+        uses: github-actions-x/commit@v2.9
+        with:
+          push-branch: generated_data
+          commit-message: Automatically updated reference data using GitHub Actions
