--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -16,10 +16,9 @@
 name: .github Pull Request Workflow
 
 on:
-  workflow_dispatch:
-  # pull_request:
-  #   branches:
-  #     - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   Common-Pull-Request:
