--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ project(chemcache VERSION "${VERSION}" LANGUAGES CXX)
 include(FetchContent)
 FetchContent_Declare(
     nwx_cmake
-    GIT_REPOSITORY https://github.com/NWChemEx-Project/NWXCMake
+    GIT_REPOSITORY https://github.com/NWChemEx/NWXCMake
 )
 FetchContent_MakeAvailable(nwx_cmake)
 list(APPEND CMAKE_MODULE_PATH "${nwx_cmake_SOURCE_DIR}/cmake")
@@ -51,7 +51,7 @@ nwx_cxx_api_docs("${project_inc_dir}")
 
 cmaize_find_or_build_dependency(
     simde
-    URL github.com/NWChemEx-Project/SimDE
+    URL github.com/NWChemEx/SimDE
     PRIVATE TRUE
     BUILD_TARGET simde
     FIND_TARGET nwx::simde
