--- a/.github/.licenserc.yaml
+++ b/.github/.licenserc.yaml
@@ -20,6 +20,7 @@ header:
   paths-ignore:
     - .github/
     - docs/Makefile
+    - docs/source/nitpick_exceptions
     - reference_data/atomic_densities/default
     - reference_data/basis_sets/default
     - reference_data/molecules/default
