Fixed string in unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ docs/source/api
 _build/
 Debug/
 Release/
+install/
 
 # Users commonly store their specific CMake settings in a toolchain file
 toolchain.cmake
