starts splitting basis sets

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ install/
 
 # Users commonly store their specific CMake settings in a toolchain file
 toolchain.cmake
+
+# Recommended directory for downloading basis sets
+_bases/
