Move licenserc to project root for license-eye and add build/ directory ignore

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -19,6 +19,7 @@ header:
 
   paths-ignore:
     - .github/
+    - build/
     - docs/Makefile
     - docs/source/nitpick_exceptions
     - reference_data/atomic_densities/default
