Pre-commit Update (#87)
* Move licenserc to project root for license-eye and add build/ directory ignore

* Initial pre-commit changes (flake8 compliance still needed)

* flake8 compliance and fix error caught by mypy

* Redo some file tree documentation

* flake8 for generate_basis.py

* Fix Callable usage

* Add flake8 ignores

* Add recommended Black compatibility ignores

* Ignore licensing on flake8 config file

* Completed flake8 compliance for utils/data_management

* Flake8 compat in tests/

* Flake8 compat for reference_data/

* Flake8 compliance with docs/

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -19,6 +19,8 @@ header:
 
   paths-ignore:
     - .github/
+    - .flake8
+    - build/
     - docs/Makefile
     - docs/source/nitpick_exceptions
     - reference_data/atomic_densities/default
