--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -44,7 +44,7 @@ jobs:
         run: |
           python -m venv venv
           . venv/bin/activate
-          pip install -r utils/data_management/requirements.txt
+          pip install -r requirements.txt
         shell: bash
       - name: Overwrite 'generated_data' with 'master'
         run: |
